update md comments

--- a/mnist_cnn_2.ipynb
+++ b/mnist_cnn_2.ipynb
@@ -193,14 +193,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b9affc9c",
-   "metadata": {},
-   "source": [
-    "## Building the Model"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 385,
    "id": "8bda3797",
@@ -219,6 +211,14 @@
    ],
    "source": [
     "plot_images(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9affc9c",
+   "metadata": {},
+   "source": [
+    "## Building the Model"
    ]
   },
   {
@@ -531,6 +531,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97511504",
+   "metadata": {},
+   "source": [
+    "Let's see how our training and validation accuracy/loss evolves with model training.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 338,
    "id": "2afbcab7",
@@ -589,6 +597,14 @@
    "source": [
     "test_results = model.evaluate(X_test, y_test)\n",
     "print(f\"Test loss: {test_results[0]:.4f}, test acc: {test_results[1]:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f0ad4c",
+   "metadata": {},
+   "source": [
+    "Let's plot a confusion matrix to see where our errors are clustered.  We'll also plot the misidentified digits along with their predicted labels.  "
    ]
   },
   {
